# Quantization

./: LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
scripts/: benchmark_inference_fair_v2.py  generate_all_figures.py  quantization_extra_analyses.py  run_precision_experiment.py  run_qat_experiment.py
utils/: data_loader.py  metrics.py  model_factory.py  qat_utils.py  quantization_utils.py  quick_test.py  run_all_experiments.py  run_single_modality.py  train_eval.py  verify_datasets.py
