[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-bench"
version = "0.1.0"
description = "Reproducible benchmarking utilities for quantization and inference precision experiments."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
